# jarvis

./: .gitignore  README.md  docker-compose.yml  infra.toml  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.sh  release.sh  test.sh
src/: bot.py  config.py  main.py
src/agent/: README.md  core.py  mcp.py  providers.py  workflow.yml
src/agent/jarvis/: soul.md  system_prompt.md
src/agent/memory/: __init__.py  conversation_store.py  persona_pb2.py  schema.surql  store.py
src/agent/memory/prompts/: extractor.md
src/agent/prompts/jarvis/: context_me.json  system.md
src/channels/: __init__.py  discord.py
src/exts/: __init__.py  discord_ext.py  telegram_ext.py
src/memory/: persona.proto
src/memory/prompts/: extractor.md  gatekeeper.md
src/tools/: __init__.py  datetime_tools.py  mcp.py  server.py  skills.py
src/tools/memory/: __init__.py  conversation.py  knowledge.py
src/utils/: proto2json.py
tests/: test_agent.py
tests/agent/: test_extractor.py  test_gatekeeper.py  test_providers.py
tests/utils/: test_proto2json.py
