[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = "Discord AI Agent"
authors = ["Author <author@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.7.0"
openai = "^2.24.0"
python-dotenv = "^1.2.1"
langchain = "^1.2.10"
langchain-openai = "^1.1.10"
langchain-google-genai = "^4.0.0"
langgraph = "^1.0.10"
protobuf = ">=6.31.1,<7.0.0"
qdrant-client = {extras = ["fastembed"], version = "^1.17.0"}
surrealdb = "^1.0.0"
jsonpatch = "^1.33"
mcp = {extras = ["cli"], version = "^1.0.0"}
langchain-mcp-adapters = "^0.1.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.0.0"
grpcio-tools = "^1.76.0"
ruff = "^0.9.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:sugar --cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/**/__pycache__/*", "src/**/proto*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
